--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
     "private": true,
-    "type": "module",
     "scripts": {
-        "dev": "vite",
-        "build": "vite build"
+      "dev": "npm run development",
+      "development": "mix",
+      "watch": "mix watch",
+      "hot": "mix watch --hot",
+      "prod": "npm run production",
+      "production": "mix --production"
     },
     "devDependencies": {
-        "autoprefixer": "^10.4.19",
-        "axios": "^1.6.4",
-        "laravel-mix": "^6.0.49",
-        "laravel-vite-plugin": "^1.0",
-        "postcss": "^8.4.38",
-        "tailwindcss": "^3.4.3",
-        "vite": "^5.0"
+      "axios": "^1.4.0",
+      "laravel-mix": "^6.0.49",
+      "lodash": "^4.17.21",
+      "postcss": "^8.4.21",
+      "tailwindcss": "^3.3.2",
+      "autoprefixer": "^10.4.14"
     }
-}
+  }
